--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,13 +4,16 @@
   | default @import url()
   |============================
 */
+@import url('./common.css');
+@import url('./variables.css');
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./gallery.css');
+@import url('./charitableFunds.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-family: DM Sans, Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 14px;
   line-height: 24px;
   font-weight: 400;
 
