--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container">
   <div class="shop-naigation">
     <ul class="shop-naigation-list"></ul>
     <load src="/partials/charitableFunds.html" />
