--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,1 @@
-<header class="header container">
-  <h1 class="title">dfldsfjads; <span>aslfaj;da</span></h1>
-</header>
+<header class="header container"></header>
