--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,16 +1,34 @@
+:root {
+  --gold-color: #eac645;
+  --violet-color: #4f2ee8;
+  --gray-color: #202024;
+  --dark-color: #111111;
+  --white-color: #ffffff;
+  --white-background-color: #f6f6f6;
+  --border-color: rgba(79, 46, 232, 0.4);
+}
+.dark {
+  --background-color: var(--gray-color);
+  --main-fount-color: var(--white-color);
+  --title-color: var(--white-color);
+  --hover-color: var(--gold-color);
+}
+.light {
+  --background-color: var(--white-background-color);
+  --main-fount-color: var(--dark-color);
+  --title-color: var(--dark-color);
+  --hover-color: var(--violet-color);
+}
+
 body {
   font-family: 'DM Sans', sans-serif;
   font-weight: 400;
-  color: var(--dark-color);
-  background-color: var(--white-color);
+  color: var(--main-fount-color);
+  background-color: var(--background-color);
   line-height: 1.28;
   font-style: normal;
   font-size: 14px;
   letter-spacing: -0.04em;
-}
-body.dark {
-  background-color: var(--gray-color);
-  color: var(--white-color);
 }
 .container {
   max-width: 375px;
