--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -1,7 +1,9 @@
-<section class="container">
-  <div class="shop-naigation">
-    <ul class="shop-naigation-list"></ul>
+<main class="container">
+  <div class="shop-navigation">
+    <ul class="shop-navigation-list"></ul>
     <load src="/partials/charitableFunds.html" />
   </div>
-  <div class="gallery js-gallery"></div>
-</section>
+  <div class="gallery js-gallery">
+
+  </div>
+</main>
