Add two function addBookToCart and removeBookFromCart

--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -3,7 +3,5 @@
     <ul class="shop-navigation-list"></ul>
     <load src="/partials/charitableFunds.html" />
   </div>
-  <div class="gallery js-gallery">
-
-  </div>
+  <div class="gallery js-gallery"></div>
 </main>
