--- a/src/partials/shoppingList.html
+++ b/src/partials/shoppingList.html
@@ -1,3 +1,4 @@
 <section class="container">
   <load src="/partials/charitableFunds.html" />
+  <load src="/partials/basketShoppingList.html" />
 </section>
