--- a/src/partials/charitableFunds.html
+++ b/src/partials/charitableFunds.html
@@ -1,100 +1,105 @@
-<div class="">
-    <h2 class="">Support Ukraine
-        <svg class="" width="20" height="32">
+<div class="charity-slider">
+    <h2 class="charity-title">Support Ukraine
+        <svg class="charity-logo" width="20" height="32">
             <use href="../img/icons.svg#icon-gerb"></use>
         </svg>
     </h2>
-    <ul class="">
-        <li class="">01
-            <a class=""
-                href="https://www.savethechildren.net/what-we-do/emergencies/ukraine-crisis"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/save_x1.png 1x,
-                            ../img/save_x2.png 2x
-                        " class="" src="../img/save_x1.png" alt="Save the Chidren" width="149" height="33" 
-                />
-            </a>
-        </li>
-        <li class="">02
-            <a class="" href="https://www.projecthope.org/country/ukraine/" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/hope_x1.png 1x,
-                            ../img/hope_x2.png 2x
-                        " class="" src="../img/hope_x1.png" alt="Project HOPE" width="90" height="45" 
-                />
-            </a>
-        </li>
-        <li class="">03
-            <a class="" href="https://internationalmedicalcorps.org/country/ukraine/" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/medical_x1.png 1x,
-                            ../img/medical_x2.png 2x
-                        " class="" src="../img/medical_x1.png" alt="International Medical Corps" width="129" height="35" 
-                />
-            </a>
-        </li>
-        <li class="">04
-            <a class="" href="https://www.razomforukraine.org/" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/razom_x1.png 1x,
-                            ../img/razom_x2.png 2x
-                        " class="" src="../img/razom_x1.png" alt="RAZOM" width="105" height="35" />
-            </a>
-        </li>
-        <li class="">05
-            <a class="" href="https://www.actionagainsthunger.org/location/europe/ukraine/" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/action_x1.png 1x,
-                            ../img/action_x2.png 2x
-                        " class="" src="../img/action_x1.png" alt="Action against hunger" width="78" height="49" 
-                />
-            </a>
-        </li>
-        <li class="">06
-            <a class="" href="https://prytulafoundation.org/en" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/sergiy_x1.png 1x,
-                            ../img/sergiy_x2.png 2x
-                        " class="" src="../img/sergiy_x1.png" alt="Serhiy Prytula Charity Foundation" width="117" height="39" 
-                />
-            </a>
-        </li>
-        <li class="">07
-            <a class="" href="https://www.msf.org/ukraine" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/medecins_x1.png 1x,
-                            ../img/medecins_x2.png 2x
-                        " class="" src="../img/medecins_x1.png" alt="Medicins Sans Frontieres" width="133" height="47" 
-                />
-            </a>
-        </li>
-        <li class="">08
-            <a class="" href="https://www.wvi.org/emergencies/ukraine" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/world_x1.png 1x,
-                            ../img/world_x2.png 2x
-                        " class="" src="../img/world_x1.png" alt="World vision" width="81" height="39" 
-                />
-            </a>
-        </li>
-        <li class="">09
-            <a class="" href="https://u24.gov.ua/uk" target="_blank"
-                rel="noopener noreferrer">
-                <img srcset="
-                            ../img/united_x1.png 1x,
-                            ../img/united_x2.png 2x
-                        " class="" src="../img/united_x1.png" alt="UNITED24" width="149" height="15" 
-                />
-            </a>
-        </li>
-    </ul>
+        <ul class="swiper-wrapper js-charity-list">
+            <li class="swiper-slide charity-slide">01
+                <a class=""
+                    href="https://www.savethechildren.net/what-we-do/emergencies/ukraine-crisis"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/save_x1.png 1x,
+                                ../img/save_x2.png 2x
+                            " class="charity-logo" src="../img/save_x1.png" alt="Save the Chidren" width="149" height="33" 
+                    />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">02
+                <a class="" href="https://www.projecthope.org/country/ukraine/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/hope_x1.png 1x,
+                                ../img/hope_x2.png 2x
+                            " class="charity-logo" src="../img/hope_x1.png" alt="Project HOPE" width="90" height="45" 
+                    />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">03
+                <a class="" href="https://internationalmedicalcorps.org/country/ukraine/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/medical_x1.png 1x,
+                                ../img/medical_x2.png 2x
+                            " class="charity-logo" src="../img/medical_x1.png" alt="International Medical Corps" width="129" height="35" 
+                    />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">04
+                <a class="" href="https://www.razomforukraine.org/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/razom_x1.png 1x,
+                                ../img/razom_x2.png 2x
+                            " class="charity-logo" src="../img/razom_x1.png" alt="RAZOM" width="105" height="35" />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">05
+                <a class="" href="https://www.actionagainsthunger.org/location/europe/ukraine/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/action_x1.png 1x,
+                                ../img/action_x2.png 2x
+                            " class="charity-logo" src="../img/action_x1.png" alt="Action against hunger" width="78" height="49" 
+                    />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">06
+                <a class="" href="https://prytulafoundation.org/en" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/sergiy_x1.png 1x,
+                                ../img/sergiy_x2.png 2x
+                            " class="charity-logo" src="../img/sergiy_x1.png" alt="Serhiy Prytula Charity Foundation" width="117" height="39" 
+                    />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">07
+                <a class="" href="https://www.msf.org/ukraine" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/medecins_x1.png 1x,
+                                ../img/medecins_x2.png 2x
+                            " class="charity-logo" src="../img/medecins_x1.png" alt="Medicins Sans Frontieres" width="133" height="47" 
+                    />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">08
+                <a class="" href="https://www.wvi.org/emergencies/ukraine" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/world_x1.png 1x,
+                                ../img/world_x2.png 2x
+                            " class="charity-logo" src="../img/world_x1.png" alt="World vision" width="81" height="39" 
+                    />
+                </a>
+            </li>
+            <li class="swiper-slide charity-slide">09
+                <a class="" href="https://u24.gov.ua/uk" target="_blank"
+                    rel="noopener noreferrer">
+                    <img srcset="
+                                ../img/united_x1.png 1x,
+                                ../img/united_x2.png 2x
+                            " class="charity-logo" src="../img/united_x1.png" alt="UNITED24" width="149" height="15" 
+                    />
+                </a>
+            </li>
+        </ul>
+        <button type="button" class="charity-btn js-charity-btn">
+            <svg class="charity-btn-icon" width="22" height="22">
+                <use href="../img/icons.svg#icon-angle-small-left"></use>
+            </svg>
+        </button>
 </div>
