--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,7 @@
 @import url('./header.css');
 @import url('./gallery.css');
 @import url('./charitableFunds.css');
+@import url('./basket.css');
 
 :root {
   font-synthesis: none;
