--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container shop-container">
   <div class="shop-navigation">
     <ul class="shop-navigation-list"></ul>
     <load src="/partials/charitableFunds.html" />
