Created markup and rendering Categories list

--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -1,6 +1,10 @@
 <main class="container">
   <div class="shop-navigation">
-    <ul class="shop-navigation-list"></ul>
+    <ul class="shop-navigation-list" id="listContainer">
+      <li class="allCategories">
+        <button class="btnAllCategories">ALL CATEGORIES</button>
+      </li>
+    </ul>
     <load src="/partials/charitableFunds.html" />
   </div>
   <div class="gallery js-gallery"></div>
