--- a/src/css/common.css
+++ b/src/css/common.css
@@ -2,6 +2,7 @@
   --gold-color: #eac645;
   --violet-color: #4f2ee8;
   --gray-color: #202024;
+  --light-gray-color: #b4afaf;
   --dark-color: #111111;
   --white-color: #ffffff;
   --white-background-color: #f6f6f6;
