--- a/src/partials/basketShoppingList.html
+++ b/src/partials/basketShoppingList.html
@@ -1,3 +1,5 @@
 <button class="test">start</button>
 
+<h1 class="title shList-title">Shopping <span>List</span></h1>
+
 <ul class="basket-list"></ul>
