--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,9 @@
-<header class="header container"></header>
+<header class="header container">
+    <div class="header-container container">
+    <div class="logo-header">
+        <a class="logo-header-img">
+            <img src="../img/logo.svg" />
+        </a>  
+    </div>
+    </div>
+</header>
