--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,25 @@
-<header class="header container">
-    <div class="header-container container">
-    <div class="logo-header">
-        <a class="logo-header-img">
-            <img src="../img/logo.svg" />
-        </a>  
+<link rel="stylesheet" href="../css/burger.css" />
+<div class="burger-wraper is-open">
+  <div class="burger-header light">
+    <a href=""
+      ><img
+        class="burger-boohshelf-logo"
+        src="../img/boohshelf_logo.svg"
+        alt="boohshelf_logo" />
+      <div class="burger-boohshelf"></div
+    ></a>
+    <div class="burger-chexbox-container">
+      <label class="burger-switch">
+        <input type="checkbox" class="burger-input" />
+        <span class="burger-slider"></span>
+      </label>
+      <button class="burger-x-button" type="button"></button>
     </div>
-    </div>
-</header>
+  </div>
+  <div class="burger-body">
+    <ul>
+      <li>Home</li>
+      <li>Shopping list</li>
+    </ul>
+  </div>
+</div>
