--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -18,20 +18,84 @@
 .category-list {
 }
 
+.books-item:not(:first-child) {
+  display: none;
+}
+
 .books-item {
+  position: relative;
+  overflow: visually-hidden;
 }
 
 .book-image {
+  border: 1px solid #000;
+  border-radius: 8px;
+  width: 335px;
+  height: 485px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  margin-bottom: 14px;
 }
 
 .book-image-message-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 0 8px 8px;
+  width: 335px;
+  height: 70px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  background-color: var(--gold-color);
+  position: absolute;
+  inset: 0;
+  transform: translateY(100%);
+  transition: transform 100ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.books-item:hover .book-image-message-text,
+.books-item:focus .book-image-message-text {
+  transform: translateY(0%);
 }
 
 .book-title {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 112%;
+  letter-spacing: -0.04em;
+  color: var(--black);
+  margin-bottom: 4px;
 }
 
 .book-author {
+  font-family: var(--font-family);
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: -0.04em;
+  color: #b4afaf;
+}
+
+.category-div {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .category-button {
+  display: flex;
+  justify-content: flex-end;
+  border: 2px solid var(--violet-color);
+  border-radius: 40px;
+  padding: 14px 28px;
+  margin-top: 8px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  margin-bottom: 40px;
 }
