--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
     <a href=""
       ><img
         class="burger-boohshelf-logo"
-        src="../img/logo.svg"
+        src="../img/bookshelf_logo.svg"
         alt="boohshelf_logo" />
       <div class="burger-boohshelf"></div
     ></a>
