--- a/src/css/common.css
+++ b/src/css/common.css
@@ -11,7 +11,7 @@
   --background-color: var(--gray-color);
   --main-fount-color: var(--white-color);
   --title-color: var(--white-color);
-  --hover-color: var(--gold-color);
+  --gold-color: var(--gold-color);
 }
 .light {
   --background-color: var(--white-background-color);
