--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,20 @@
-<link rel="stylesheet" href="../css/burger.css" />
-<div class="burger-wraper is-open">
+<header class="header-container">
+    <a href="">
+        <img class="header-boohshelf-logo" 
+        src="../img/bookshelf_logo.svg" alt="boohshelf_logo" />
+        Bookshelf
+    </a>
+    <nav>
+        <ul class="navigation">
+            <li><a href="">HOME</a></li>
+            <li><a href="">SHOPPING LIST</a></li>
+          </ul>
+    </nav>
+    <label class="header-switch"><input type="checkbox" class="header-input" /><span class="header-slider"></span></label>
+    <button class="header-x-button" type="button"></button>
+  </header>
+  
+<!-- <div class="header-wraper">
   <div class="burger-header light">
     <a href=""
       ><img
@@ -16,10 +31,4 @@
       <button class="burger-x-button" type="button"></button>
     </div>
   </div>
-  <div class="burger-body">
-    <ul>
-      <li>Home</li>
-      <li>Shopping list</li>
-    </ul>
-  </div>
-</div>
+</div> -->
