--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -28,25 +28,27 @@
   letter-spacing: 0.03em;
 }
 
-.category-list {
-}
-
 .books-item:not(:first-child) {
   display: none;
 }
 
 .books-item {
+}
+.book-wrapper {
   position: relative;
-  overflow: visually-hidden;
+  overflow: hidden;
 }
 
 .book-image {
-  border: 1px solid #000;
   border-radius: 8px;
   width: 335px;
   height: 485px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   margin-bottom: 14px;
+}
+
+.dark .book-image {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border: 1px solid #000;
 }
 
 .book-image-message-text {
@@ -57,13 +59,12 @@
   width: 335px;
   height: 70px;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.29;
-  letter-spacing: -0.04em;
   text-transform: uppercase;
   background-color: var(--gold-color);
   position: absolute;
-  inset: 0;
+  right: 0;
+  bottom: 0;
+  /* inset: 0; */
   transform: translateY(100%);
   transition: transform 100ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -99,6 +100,10 @@
 }
 
 .category-button {
+  align-items: center;
+  width: 124px;
+  color: var(--main-fount-color);
+  background-color: var(--background-color);
   display: flex;
   justify-content: flex-end;
   border: 2px solid var(--violet-color);
@@ -106,7 +111,7 @@
   padding: 14px 28px;
   margin-top: 8px;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 1.29;
   letter-spacing: -0.01em;
   text-transform: uppercase;
@@ -120,6 +125,35 @@
   .shop-navigation {
     flex-direction: row;
     gap: 32px;
+  }
+  .category-title {
+    line-height: 1.71;
+  }
+
+  .category-list {
+    flex-basis: calc((100% - 50px) / 3);
+    display: flex;
+    gap: 25px;
+  }
+  .books-item:not(:first-child) {
+    display: block;
+  }
+
+  .books-item:nth-child(4),
+  .books-item:last-child {
+    display: none;
+  }
+
+  .book-image {
+    border-radius: 8px;
+    width: 218px;
+    height: 316px;
+  }
+
+  .book-title {
+  }
+
+  .category-div {
   }
 }
 
