--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,17 +1,18 @@
 <header class="header-container">
-    <a href="">
+    <a class="header-logo" href="">
         <img class="header-boohshelf-logo" 
         src="../img/bookshelf_logo.svg" alt="boohshelf_logo" />
         Bookshelf
     </a>
-    <nav>
-        <ul class="navigation">
-            <li><a href="">HOME</a></li>
-            <li><a href="">SHOPPING LIST</a></li>
-          </ul>
+    <nav class="header-navigation">
+        <ul class="header-navigation-list">
+            <li class="header-navigation-item"><a href="">HOME</a></li>
+            <li class="header-navigation-item"><a href="">SHOPPING LIST</a></li>
+        </ul>
     </nav>
     <label class="header-switch"><input type="checkbox" class="header-input" /><span class="header-slider"></span></label>
     <button class="header-x-button" type="button"></button>
+    <button class="header-open-button" type="button"></button>
   </header>
   
 <!-- <div class="header-wraper">
