--- a/src/css/charitableFunds.css
+++ b/src/css/charitableFunds.css
@@ -1,7 +1,6 @@
 .charity-slider {
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
     border-radius: 16px;
     width: 335px;
     height: 460px;
@@ -12,16 +11,24 @@
 
 .charity-title {
     display: flex;
+    align-items: center;
     font-size: 22px;
     color: var(--white-color);
-    margin-bottom: 44px;
-    align-items: center;
+    margin-bottom: 40px;
     gap: 12px;
 }
 
-.charity-list {
+.charity-container {
     height: 292px;
-    overflow: scroll;
+    overflow: hidden;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.charity-list {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .charity-slide {
@@ -29,7 +36,8 @@
     flex-direction: row;
     align-items: center;
     font-size: 14px;
-    color: var(white-color);
+    height: 32px;
+    color: var(--white-color);
     margin-bottom: 20px;
     gap: 12px;
 }
@@ -48,9 +56,58 @@
     margin: 0 auto;
     padding: 0;
     border: none;
+    transition: transform 0.3s ease;
+    transform: rotate(0deg);
 }
 .charity-btn-icon {
     transform: rotate(-90deg);
     fill: var(--violet-color);
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+        padding: 0 32px;
+    }
+
+    .title {
+        font-size: 44px;
+        line-height: 1.08;
+    }
+
+    .charity-slider {
+        width: 335px;
+        height: 474px;
+    }
+
+    .charity-title {
+        font-size: 24px;
+    }
+
+    .charity-container {
+        margin-bottom: 24px;
+    }
+
+    .charity-btn {
+        width: 38px;
+        height: 38px;
+    }
+
+    .charity-btn-icon {
+        width: 22px;
+        height: 22px;
+    }
+}
+
+@media screen and (min-width: 1422px) {
+    .container {
+        max-width: 1422px;
+        padding: 0 15px;
+    }
+
+    .charity-slider {
+        width: 356px;
+        height: 474px;
+    } 
 }
 
