--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,46 @@
-<header class="header-container">
-    <a class="header-logo" href="">
-        <img class="header-boohshelf-logo" 
-        src="../img/bookshelf_logo.svg" alt="boohshelf_logo" />
-        Bookshelf
+<header class='header-container'>
+  <nav class='header-navigation'>
+    <a class='header-logo' href='/'>
+      <img
+        class='header-boohshelf-logo'
+        src='../img/bookshelf_logo.svg'
+        alt='boohshelf_logo'
+      />
+      Bookshelf
     </a>
-    <nav class="header-navigation">
-        <ul class="header-navigation-list">
-            <li class="header-navigation-item"><a href="">HOME</a></li>
-            <li class="header-navigation-item"><a href="">SHOPPING LIST</a></li>
-        </ul>
-    </nav>
-    <label class="header-switch"><input type="checkbox" class="header-input" /><span class="header-slider"></span></label>
-    <button class="header-x-button" type="button"></button>
-    <button class="header-open-button" type="button"></button>
-  </header>
+    <ul class='header-navigation-list'>
+      <li class='header-navigation-item'><a href='/'>home</a></li>
+      <li class='header-navigation-item'>
+        <a href='/shopListPage.html'
+          >shopping list
+          <svg class='header-cart-icon' width='20' height='20'>
+            <use href='../img/icons.svg#icon-cart'></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <div class='header-btns-wrapper'>
+    <label class='header-switch'
+      ><input type='checkbox' class='header-input' /><span
+        class='header-slider'
+      ></span
+    ></label>
+    <button class='header-close-button' type='button'>
+      <svg class='header-close-icon' width='28' height='28'>
+        <use href='../img/icons.svg#icon-x-close'></use>
+      </svg>
+    </button>
+    <button class='header-open-button' type='button'>
+      <svg class='header-open-icon' width='28' height='28'>
+        <use href='../img/icons.svg#icon-align-left'></use>
+      </svg>
+    </button>
+  </div>
+</header>
+
+
+
   
 <!-- <div class="header-wraper">
   <div class="burger-header light">
