--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -25,6 +25,10 @@
   display: none;
 }
 
+.books-item {
+  cursor: pointer;
+}
+
 .book-wrapper {
   position: relative;
   overflow: hidden;
@@ -55,7 +59,7 @@
   right: 0;
   bottom: 0;
   transform: translateY(100%);
-  transition: transform 100ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .books-item:hover .book-image-message-text,
@@ -100,6 +104,7 @@
   text-transform: uppercase;
   margin-top: 8px;
   margin-bottom: 40px;
+  transition: background-color 250ms ease;
 }
 
 .category-button:hover,
