--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@
 @import url('./gallery.css');
 @import url('./charitableFunds.css');
 @import url('./basket.css');
+@import url('./shopListLinks.css');
 
 :root {
   font-synthesis: none;
