--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,62 +1,40 @@
-<header class='header-container'>
-  <nav class='header-navigation'>
-    <a class='header-logo' href='/'>
+<header class="header-container">
+  <nav class="header-navigation">
+    <a class="header-logo" href="/">
       <img
-        class='header-boohshelf-logo'
-        src='../img/bookshelf_logo.svg'
-        alt='boohshelf_logo'
+        class="header-boohshelf-logo"
+        src="../img/bookshelf_logo.svg"
+        alt="boohshelf_logo"
       />
       Bookshelf
     </a>
-    <ul class='header-navigation-list'>
-      <li class='header-navigation-item'><a href='/'>home</a></li>
-      <li class='header-navigation-item'>
-        <a href='/shopListPage.html'
+    <ul class="header-navigation-list">
+      <li class="header-navigation-item"><a href="/">home</a></li>
+      <li class="header-navigation-item">
+        <a href="/shopListPage.html"
           >shopping list
-          <svg class='header-cart-icon' width='20' height='20'>
-            <use href='../img/icons.svg#icon-cart'></use>
+          <svg class="header-cart-icon" width="20" height="20">
+            <use href="../img/icons.svg#icon-cart"></use>
           </svg>
         </a>
       </li>
     </ul>
   </nav>
-  <div class='header-btns-wrapper'>
-    <label class='header-switch'
-      ><input type='checkbox' class='header-input' /><span
-        class='header-slider'
+  <div class="header-btns-wrapper">
+    <label class="header-switch"
+      ><input type="checkbox" class="header-input" /><span
+        class="header-slider"
       ></span
     ></label>
-    <button class='header-close-button' type='button'>
-      <svg class='header-close-icon' width='28' height='28'>
-        <use href='../img/icons.svg#icon-x-close'></use>
+    <button class="header-close-button" type="button">
+      <svg class="header-close-icon" width="28" height="28">
+        <use href="../img/icons.svg#icon-x-close"></use>
       </svg>
     </button>
-    <button class='header-open-button' type='button'>
-      <svg class='header-open-icon' width='28' height='28'>
-        <use href='../img/icons.svg#icon-align-left'></use>
+    <button class="header-open-button" type="button">
+      <svg class="header-open-icon" width="28" height="28">
+        <use href="../img/icons.svg#icon-align-left"></use>
       </svg>
     </button>
   </div>
 </header>
-
-
-
-  
-<!-- <div class="header-wraper">
-  <div class="burger-header light">
-    <a href=""
-      ><img
-        class="burger-boohshelf-logo"
-        src="../img/bookshelf_logo.svg"
-        alt="boohshelf_logo" />
-      <div class="burger-boohshelf"></div
-    ></a>
-    <div class="burger-chexbox-container">
-      <label class="burger-switch">
-        <input type="checkbox" class="burger-input" />
-        <span class="burger-slider"></span>
-      </label>
-      <button class="burger-x-button" type="button"></button>
-    </div>
-  </div>
-</div> -->
