--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <a class="header-logo" href="/">
       <img
         class="header-boohshelf-logo"
-        src="../img/bookshelf_logo.svg"
+        src="../img/logo.svg"
         alt="boohshelf_logo"
       />
       Bookshelf
