Rendering books by button click

--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -2,7 +2,7 @@
   <div class="shop-navigation">
     <ul class="shop-navigation-list" id="listContainer">
       <li class="allCategories">
-        <button data-category=">All categories">All categories</button>
+        <button data-category="All categories">All categories</button>
       </li>
     </ul>
     <load src="/partials/charitableFunds.html" />
